# AndroidLua

app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: test.lua
app/src/main/cpp/lua/: CMakeLists.txt  lapi.c  lauxlib.c  lauxlib.h  lbaselib.c  lcode.c  lcode.h  ldblib.c  ldebug.c  ldo.c  ldump.c  lfunc.c  lgc.c  liolib.c  llex.c  llex.h  lmathlib.c  lmem.c  loadlib.c  lobject.c  lobject.h  lopcodes.h  loslib.c  lparser.c  lparser.h  lstate.c  lstate.h  lstring.c  lstrlib.c  ltable.c  ltable.h  ltablib.c  ltm.h  lua.h  lundump.c  lvm.c  lzio.c  lzio.h
app/src/main/cpp/luajava/: luajava.c
app/src/main/java/com/hanschen/lua/example/: MainActivity.java  SecondActivity.java
app/src/main/java/org/keplerproject/luajava/: LuaJavaAPI.java  LuaObject.java  LuaState.java  LuaStateFactory.java
app/src/main/res/layout/: main.xml
